feat: about css styles / html fixes

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -77,9 +77,7 @@ textarea{
     outline: none;
 }
 /* 
-?RADIAL GRADIENT
-?background: radial-gradient(50% 50% at 50% 50%, rgba(255, 101, 118, .08) 0%, rgba(255, 101, 118, 0) 100%); 
-*/
+
 /* !REUSABLE CLASSES */
 
 .container{
@@ -106,7 +104,21 @@ textarea{
     background-size: cover;
 }
 
+.d-grid{
+    display: grid;
+}
 
+.section:not(.hero)::before{
+    content: '';
+    position: absolute;
+    top: 35%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 80vw;
+    height: 80vw;
+    background: radial-gradient(50% 50% at 50% 50%, rgba(255, 101, 118, .1) 0%, rgba(255, 101, 118, 0) 100%);
+    z-index: -1;
+}
 /* !HEADER */
 
 .header{
@@ -288,6 +300,107 @@ textarea{
     background-size: cover;
 }
 /* !ABOUT ME STYLES */
+
+.section-description{
+    gap: 2.5rem;
+    margin-bottom: 2.5rem;
+}
+
+.description{
+    text-transform: uppercase;
+    font-weight: 300;
+}
+
+.text-bold{
+    font-weight: bold;
+}
+
+.description-image{
+    width: 25rem;
+    height: 25rem;
+    margin: 0 auto;
+    transform: rotate(25deg);
+}
+
+.description-image img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.description-image.has-sparkles::before,
+.description-image.has-sparkles::after{
+    width: 2rem;
+    height: 2rem;
+}
+
+.description-image.has-sparkles::before{
+    top: 2rem;
+    right: 1rem;
+}
+
+.description-image.has-sparkles::after{
+    top: 10rem;
+    right: -1rem;
+}
+
+.tech-stack{
+    max-width: 50rem;
+    grid-template-columns: repeat(auto-fit, minmax(5rem, 1fr));
+    gap: 2.5rem;
+}
+
+.tech-stack-item{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+.tech-stack-item i{
+    font-size: 5rem;
+    opacity: .5;
+}
+
+.dark-theme .tech-stack-item i{
+    opacity: .8;
+}
+
+.tech-stack-item::before,
+.tech-stack-item::after{
+    position: absolute;
+    top: -1rem;
+    transform: translateY(-100%);
+    opacity: 0;
+    transition: transform .5s, opacity .5s;
+}
+
+.tech-stack-item::before{
+    content: '';
+    border: 1rem solid transparent;
+    border-top-color: var(--dark-color);
+    transform: translateY(0);
+    z-index: 5;
+}
+
+.tech-stack-item::after{
+    content: attr(data-tooltip);
+    width: max-content;
+    background-color: var(--dark-color);
+    color: var(--light-color);
+    padding: .5rem 1rem;
+    border-radius: .4rem;
+}
+
+.tech-stack-item:hover::before{
+    opacity: 1;
+    transform: translateY(-.6rem);
+}
+
+.tech-stack-item:hover::after{
+    transform: translateY(calc(-100% + -.5rem));
+    opacity: 1;
+}
 
 /* !PORTFOLIO STYLES */
 
