feat: scrollbar css styling

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -615,8 +615,21 @@ textarea{
     color: var(--dark-color);
 }
 
-
-
 /* !SCROLLBAR */
 
+::-webkit-scrollbar{
+    width: 1rem;
+}
+
+::-webkit-scrollbar-track{
+    background-color: var(--dark-color);
+}
+
+::-webkit-scrollbar-thumb{
+    background-color: #b3bbce;
+}
+
+::-webkit-scrollbar-thumb:hover{
+    background-color: #808694;
+}
 /* !MEDIA QUERIES */
