--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,7 +12,6 @@
     --title-font-family: 'Playfair Display', 'serif';
     --body-font-family: 'Poppins', 'sans-serif';
     --container-padding: 1.5rem;
-    --container-width: 96rem;
     --section-vertical-spacing: 8rem;
 }
 
@@ -82,7 +81,7 @@ textarea{
 /* !REUSABLE CLASSES */
 
 .container{
-    max-width: var(--container-width);
+    max-width: 54rem;
     margin: 0 auto;
     padding: var(--container-padding);
 }
@@ -633,3 +632,89 @@ textarea{
     background-color: #808694;
 }
 /* !MEDIA QUERIES */
+
+@media screen and (min-width: 768px) {
+    .inline-image{
+        width: 15rem;
+        height: 15rem;
+    }
+
+    .inline-image.has-sparkles::before{
+        width: 1.5rem;
+        height: 1.5rem;
+        top: -1rem;
+        right: -1rem;
+    }
+
+    .inline-image.has-sparkles::before{
+        width: 1rem;
+        height: 1rem;
+        top: 1.5rem;
+        right: -1.5rem;
+    }
+
+    .section-description{
+        grid-template-columns: 1.5fr 1fr;
+        align-items: center;
+    }
+
+    .description{
+        font-size: 2.4rem;
+    }
+
+    .description-image{
+        width: 30rem;
+        height: 30rem;
+    }
+
+    .portfolio-cards{
+        grid-template-columns: repeat(8, 1fr);
+    }
+
+    .portfolio-card-1{
+        grid-column: 1/6;
+        grid-row: 1/span 10;
+    }
+
+    .portfolio-card-2{
+        grid-column: 6/-1;
+        grid-row: 2/span 10;
+    }
+
+    .portfolio-card-3{
+        grid-column: 1/5;
+        grid-row: 11/span 10;
+    }
+
+    .portfolio-card-4{
+        grid-column: 5/-1;
+        grid-row: 12/span 10;
+    }
+
+    .portfolio-card-5{
+        grid-column: 4/-1;
+        grid-row: 22/span 10;
+    }
+
+    .portfolio-card-6{
+        grid-column: 1/4;
+        grid-row: 21/span 10;
+    }
+
+    .input-group{
+        display: flex;
+        column-gap: 5rem;
+    }
+
+    .input{
+        width: 100%;
+    }
+
+    .footer-container{
+        padding-bottom: 5rem;
+    }
+
+    .container{
+        max-width: 96rem;
+    }
+}
